Fix spacing for social icons

--- a/static/style.css
+++ b/static/style.css
@@ -72,3 +72,7 @@ footer {
 .tags {
     padding-top: 1rem;
 }
+
+.social-icon {
+    padding-left: 1rem;
+}
